--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,9 @@
         <div class="col-5"></div>
         <div class="col-2 text-center">
           <i class="fa-regular fa-bell fs-2 pt-4 text-white"></i>
+          <!-- <li *ngIf="isLoggedIn" class="nav-item">
+            <a class="nav-link" (click)="logout()" style="cursor: pointer;">Logout</a>
+          </li> -->
         </div>
       </div>
     </div>
