--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,47 +7,19 @@
       <app-sidebar></app-sidebar>
     </div>
     <div class="col-10 mt-3">
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="https://media.istockphoto.com/id/1059510610/vector/it-communication-e-learning-internet-network-as-knowledge-base.jpg?s=612x612&w=0&k=20&c=QEyHx6JnZleLmW9lYgpzvLv765rizr__5zwwKylo300="
-              class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://static-01.cinema8.com/gallery/50/8f7556bd-192a-447e-8b57-76c4f64217d9/73.webp?1675664207319"
-              class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://www.sdccd.edu/about/departments-and-offices/communications-and-public-relations/newscenter/_thumbnails/2019/onlineedu.jpg"
-              class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+      <app-slider></app-slider>
       <!-- ព័ត៌មានថ្មី -->
        <div class="row">
         <div class="col-12 mb-3  fs-4 text-danger border-bottom p-2 ps-3">ព័ត៌មានថ្មី</div>
-        
-        <div class="col-2 mb-2">
+        <app-news></app-news>
+        <!-- <div class="col-2 mb-2">
           <div class="card" style="width: 18rem;">
             <img src="/img/pcc-logo.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
             </div>
           </div>
-        </div>
+        </div> -->
        </div>
        <!-- វគ្គសិក្សាពេញនិយម -->
        <div class="row">
