--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,46 +3,32 @@
    </div>
    <div class="container-fuild">
      <div class="row">
-       <div class="col-2">
+       <div class="col-12 col-md-12 col-lg-2">
         <app-side-bar2></app-side-bar2>
        </div>
-       <div class="col-10 mt-3">
-         <app-slider></app-slider>
+       <div class="col-12 col-md-12 col-lg-10 mt-3 overflow-hidden">
+        <app-slider></app-slider>
          <!-- ព័ត៌មានថ្មី -->
           <div class="row">
            <div class="col-12 mb-3  fs-4 text-danger border-bottom p-2 ps-3">ព័ត៌មានថ្មី</div>
-           
-           <div class="col-2 mb-2">
-             <div class="card" style="width: 18rem;">
-               <img src="/img/pcc-logo.png" class="card-img-top" alt="...">
-               <div class="card-body">
-                 <h5 class="card-title">Card title</h5>
-               </div>
-             </div>
-           </div>
+             <app-news></app-news>
           </div>
           <!-- វគ្គសិក្សាពេញនិយម -->
           <div class="row">
            <div class="col-12 mb-3  ps-3 fs-4 text-danger border-bottom p-2">វគ្គសិក្សាពេញនិយម</div>
-           <div class="col-2 mb-2">
-             <div class="card" style="width: 18rem;">
-               <img src="/img/pcc-logo.png" class="card-img-top" alt="...">
-               <div class="card-body">
-                 <h5 class="card-title">Card title</h5>
-                 
-               </div>
-             </div>
-           </div>
+          
+             <app-courses></app-courses>
+           
           </div>
          <!--ចក្ខុវិស័យ  -->
          <div class="row fs-5">
-           <div class="col-6 p-5">
+           <div class="col-12 col-md-6 col-lg-6 p-5">
              <div>
                <span class="text-primary">ចក្ខុវិស័យ ៖ </span>
                មជ្ឈមណ្ឌលកុំព្យូទ័រ យើងខ្ញុំនិងក្លាយជា មជ្ឍមណ្ឌលមួយដែលមានគុណភាពល្អផ្តាច់គេ ទាំងផ្នែកចំណេះដឹង និងតំលៃសមរម្យជាងគេក្នុងក្រុងប៉ោយប៉ែត។
              </div>
            </div>
-           <div class="col-6 p-5">
+           <div class="col-12 col-md-6 col-lg-6 p-5">
              <div>
                <span class="text-primary">បេសកកម្ម ៖ </span>
                មជ្ឈមណ្ឌលកុំព្យូទ័រ យើងខ្ញុំបង្រៀនលោកអ្នកឱ្យមានចំណេះដឹងពិតប្រាកដសម្រាប់ធ្វើការ និងសម្រាប់បើកដំណើរការអាជីវកម្មផ្ទាល់ខ្លួន ក្រោយពេលបញ្ចប់ការសិក្សាតាមវគ្គនិមួយៗ។
