--- a/src/app/side-bar2/side-bar2.component.html
+++ b/src/app/side-bar2/side-bar2.component.html
@@ -1,4 +1,4 @@
-
+<div class="row pt-4">
     <div class="col-12">
       <div class="sidebar">
         <nav class="sidebar-nav">
@@ -13,7 +13,7 @@
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                  <span class="nav-icon material-symbols-rounded"><i class="fa-solid fa-gift"></i></span>
+                  <span class="nav-icon material-symbols-rounded"><i class="fa-solid fa-user"></i></span>
                   <span class="nav-label">ប្រវត្តិរូប</span>
                 </a>
                 <span class="nav-tooltip">account</span>
@@ -33,7 +33,7 @@
               <span class="nav-tooltip">Free</span>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">
+              <a routerLink="/course" class="nav-link">
                 <span class="nav-icon material-symbols-rounded"><i class="fa-solid fa-film"></i></span>
                 <span class="nav-label">វគ្គសិក្សា</span>
               </a>
@@ -65,7 +65,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" (click)="logout()" style="cursor: pointer;">
-                <span class="nav-icon material-symbols-rounded"><i class="fa-solid fa-left-from-bracket"></i></span>
+                <span class="nav-icon material-symbols-rounded"><i class="fa-solid fa-right-to-bracket"></i></span>
                 <span class="nav-label">ចេញ</span>
               </a>
               <span class="nav-tooltip">Logout</span>
@@ -74,3 +74,4 @@
         </nav>
       </div>
     </div>
+  </div>
