--- a/src/app/side-bar2/side-bar2.component.css
+++ b/src/app/side-bar2/side-bar2.component.css
@@ -1,143 +1,146 @@
 
 body{
-    position: relative;
-    font-family: "Open Sans", serif;
+  position: relative;
+  font-family: "Open Sans", serif;
 }
 .sidebar {
-    position:fixed;
-    width: 250px;
-    margin: 0;
-    border-radius: 0;
-    background: #262a95;
-    height: calc(103vh - 32px);
-    transition: all 0.4s ease;
-  }
-.nav-label1{
-  color: #fff;
-  text-decoration: underline;
-  text-align: center;
-  font-size: 22px;
-  margin-left: 20px;
+  position:fixed;
+  width: 246px;
+  margin: 0;
+  border-radius: 0;
+  /* border-right: 1px solid blue; */
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  background: rgb(220, 219, 219);
+  height: calc(103vh - 32px);
+  transition: all 0.4s ease;
 }
-  .sidebar-nav .nav-list {
-    margin-top: 0px;
-    list-style: none;
+.nav-label1{
+color: blue;
+text-decoration: underline;
+text-align: center;
+font-size: 22px;
+margin-left: 50px;
+}
+.sidebar-nav .nav-list {
+  margin-top: 70px;
+  list-style: none;
+  display: flex;
+  gap: 4px;
+  padding: 0 15px;
+  flex-direction: column;
+  transform: translateY(15px);
+  transition: 0.4s ease;
+}
+.sidebar-nav .nav-link {
+  color: blue;
+  display: flex;
+  gap: 12px;
+  white-space: nowrap;
+  border-radius: 8px;
+  
+  padding: 12px 30px;
+  align-items: center;
+  text-decoration: none;
+  transition: 0.4s ease;
+}
+.sidebar.collapsed .sidebar-nav .nav-link {
+  border-radius: 12px;
+}
+.sidebar .sidebar-nav .nav-link .nav-label {
+  transition: opacity 0.3s ease;
+}
+.sidebar.collapsed .sidebar-nav .nav-link .nav-label {
+  opacity: 0;
+  pointer-events: none;
+}
+.sidebar-nav .nav-link:hover {
+  color: #151A2D;
+  background: #fff;
+}
+.sidebar-nav .nav-item {
+  position: relative;
+}
+.sidebar-nav .nav-tooltip {
+  position: absolute;
+  top: -10px;
+  opacity: 0;
+  color: #151A2D;
+  display: none;
+  pointer-events: none;
+  padding: 6px 12px;
+  border-radius: 8px;
+  white-space: nowrap;
+  background: #fff;
+  left: calc(100% + 25px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  transition: 0s;
+}
+.sidebar.collapsed .sidebar-nav .nav-tooltip {
+  display: block;
+}
+.sidebar-nav .nav-item:hover .nav-tooltip {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(50%);
+  transition: all 0.4s ease;
+}
+.sidebar-nav .secondary-nav {
+  position: absolute;
+  bottom: 50px;
+  width: 100%;
+}
+/* Responsive media query code for small screens */
+@media (max-width: 1024px) {
+  .sidebar {
+    height: 56px;
+    margin: 13px;
+    overflow-y: hidden;
+    scrollbar-width: none;
+    width: calc(100% - 26px);
+    max-height: calc(100vh - 26px);
+  }
+  .sidebar.menu-active {
+    overflow-y: auto;
+  }
+  .sidebar .sidebar-header {
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    border-radius: 16px;
+    background: #151A2D;
+    padding: 8px 10px;
+  }
+  .sidebar-header .header-logo img {
+    width: 40px;
+    height: 40px;
+  }
+  .sidebar-header .sidebar-toggler,
+  .sidebar-nav .nav-item:hover .nav-tooltip {
+    display: none;
+  }
+  
+  .sidebar-header .menu-toggler {
     display: flex;
-    gap: 4px;
-    padding: 0 15px;
-    flex-direction: column;
-    transform: translateY(15px);
-    transition: 0.4s ease;
+    height: 30px;
+    width: 30px;
+  }
+  .sidebar-header .menu-toggler span {
+    font-size: 1.3rem;
+  }
+  .sidebar .sidebar-nav .nav-list {
+    padding: 0 10px;
   }
   .sidebar-nav .nav-link {
-    color: #fff;
-    display: flex;
-    gap: 12px;
-    white-space: nowrap;
-    border-radius: 8px;
-    padding: 12px 15px;
-    align-items: center;
-    text-decoration: none;
-    transition: 0.4s ease;
+    gap: 10px;
+    padding: 10px;
+    font-size: 0.94rem;
   }
-  .sidebar.collapsed .sidebar-nav .nav-link {
-    border-radius: 12px;
-  }
-  .sidebar .sidebar-nav .nav-link .nav-label {
-    transition: opacity 0.3s ease;
-  }
-  .sidebar.collapsed .sidebar-nav .nav-link .nav-label {
-    opacity: 0;
-    pointer-events: none;
-  }
-  .sidebar-nav .nav-link:hover {
-    color: #151A2D;
-    background: #fff;
-  }
-  .sidebar-nav .nav-item {
-    position: relative;
-  }
-  .sidebar-nav .nav-tooltip {
-    position: absolute;
-    top: -10px;
-    opacity: 0;
-    color: #151A2D;
-    display: none;
-    pointer-events: none;
-    padding: 6px 12px;
-    border-radius: 8px;
-    white-space: nowrap;
-    background: #fff;
-    left: calc(100% + 25px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-    transition: 0s;
-  }
-  .sidebar.collapsed .sidebar-nav .nav-tooltip {
-    display: block;
-  }
-  .sidebar-nav .nav-item:hover .nav-tooltip {
-    opacity: 1;
-    pointer-events: auto;
-    transform: translateY(50%);
-    transition: all 0.4s ease;
+  .sidebar-nav .nav-link .nav-icon {
+    font-size: 1.37rem;
   }
   .sidebar-nav .secondary-nav {
-    position: absolute;
-    bottom: 100px;
-    width: 100%;
+    position: relative;
+    bottom: 0;
+    margin: 40px 0 30px;
   }
-  /* Responsive media query code for small screens */
-@media (max-width: 1024px) {
-    .sidebar {
-      height: 56px;
-      margin: 13px;
-      overflow-y: hidden;
-      scrollbar-width: none;
-      width: calc(100% - 26px);
-      max-height: calc(100vh - 26px);
-    }
-    .sidebar.menu-active {
-      overflow-y: auto;
-    }
-    .sidebar .sidebar-header {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      border-radius: 16px;
-      background: #151A2D;
-      padding: 8px 10px;
-    }
-    .sidebar-header .header-logo img {
-      width: 40px;
-      height: 40px;
-    }
-    .sidebar-header .sidebar-toggler,
-    .sidebar-nav .nav-item:hover .nav-tooltip {
-      display: none;
-    }
-    
-    .sidebar-header .menu-toggler {
-      display: flex;
-      height: 30px;
-      width: 30px;
-    }
-    .sidebar-header .menu-toggler span {
-      font-size: 1.3rem;
-    }
-    .sidebar .sidebar-nav .nav-list {
-      padding: 0 10px;
-    }
-    .sidebar-nav .nav-link {
-      gap: 10px;
-      padding: 10px;
-      font-size: 0.94rem;
-    }
-    .sidebar-nav .nav-link .nav-icon {
-      font-size: 1.37rem;
-    }
-    .sidebar-nav .secondary-nav {
-      position: relative;
-      bottom: 0;
-      margin: 40px 0 30px;
-    }
-  }
+}
