--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -9,4 +9,7 @@
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
-  
+  .width-img{
+    width: 100%;
+    height: 600px;
+  }
