--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-<div id="carouselExampleAutoplaying" class="carousel slide mt-5" data-bs-ride="carousel">
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner" *ngIf="sliders.length > 0; else noImages">
         <div *ngFor="let slider of sliders; let index = index" 
              class="carousel-item" 
