--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,16 +1,16 @@
-<app-header></app-header>
+<app-home-header></app-home-header>
 <div class="row justify-content-center ">
     <div class="col-md-8 mt-3  card shadow ">
         <div class="row">
-            <div class="col-6 text-center ">
+            <div class="col-12 col-md-6 col-lg-6 text-center ">
                 <h1 class="pt-5 text-primary">សូមស្វាគមន៍ </h1>
                 <h1 class="text-danger">មកកាន់</h1>
                 <h3 class="text-primary">មជ្ឈមណ្ឌលកុំព្យូទ័រ ប៉ោយប៉ែត</h3>
-                <div ><img src="/img/illustration.png" alt=""></div>
+                <div class="d-none d-md-block"><img src="/img/illustration.png" alt=""></div>
             </div>
-            <div class="col-6 p-5">
+            <div class="col-12 col-md-6 col-lg-6 p-5">
                 <h1 class=" text-center text-danger">បង្កើតគណនី</h1>
-                <form #signupForm="ngForm" (ngSubmit)="onSubmit(signupForm)">
+                <form #signupForm="ngForm" (ngSubmit)="onSubmit()">
                     <div class="mb-3">
                       <label for="username" class="form-label">ឈ្មោះ</label>
                       <input 
