--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,40 @@
     width: 100%;
     position: fixed;
     z-index: 99999999999;
+    margin-bottom: 50px;
 }
 ol{
     list-style:square;
+}
+
+.loader-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height */
+  background-color: #fff; /* Optional: to cover background */
+}
+
+/* Your existing loader stays the same */
+.loader {
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  align-items: center;
+  border-radius: 50%;
+  background: #25b09b;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
 }
